# kaspa-fair-foundation

./: .gitignore  Cargo.toml  README.md
crates/kaspa-fair-cli/: Cargo.toml  README.md
crates/kaspa-fair-cli/src/: main.rs  roulette.rs
crates/kaspa-foundation/: Cargo.toml
crates/kaspa-foundation/src/: fairness.rs  lib.rs
crates/kaspa-foundation/src/covenant/: constants.rs  mod.rs  recipe.rs
crates/kaspa-foundation/src/evidence/: canonical_fixtures.rs  mod.rs
crates/kaspa-foundation/src/safety/: mod.rs
crates/kaspa-foundation/src/transcript/: canonical.rs  mod.rs  online_verifier.rs  schema.rs  verifier.rs
crates/kaspa-foundation/src/verifier/: mod.rs
crates/kaspa-foundation/tests/: env068_canonical_recipe.rs  env069_proof_transcript.rs  env070_offline_transcript_verifier.rs  env071_online_tn10_readonly_verifier.rs  env083c_fairness_verifier.rs  env084_verifiable_demo_round_generator.rs  env092_tn10_verifiable_entropy_round.rs
docs/: env083b-toccata-fairness-anchor-feasibility.md  env083f-verifiable-demo-round-generation-path.md  env085-static-mock-verifiable-demo-milestone.md  env086-live-toccata-workaround-inventory.md  env089-live-toccata-covenant-lineage-milestone.md  env091-full-kip17-toccata-milestone.md  env092-tn10-verifiable-entropy-round.md  env093-verifiable-tn10-entropy-milestone.md  full-kip17-toccata-milestone-summary.md  kaspa-foundation-architecture.md  live-toccata-covenant-lineage-summary.md  proof-transcript-format.md  roulette-poc-architecture.md  roulette-poc-milestone-summary.md  roulette-table-selection-ui-changes.md  safety-and-secrets.md  threat-model.md  toccata-fairness-anchor-architecture.md  verifiable-tn10-entropy-milestone-summary.md
scripts/: env072-live-tn10-verify.sh  env074-toccata-layer-ready.sh  env076-roulette-poc-dry-run.sh  env077-roulette-engine-check.sh  env078-roulette-ui-smoke.sh  env079-roulette-ui-flow-smoke.sh  env080-roulette-ui-bet-flow-smoke.sh  env080b-roulette-ui-bet-cleanup-smoke.sh  env081a-roulette-table-schema-smoke.sh  env081b-svg-table-renderer-smoke.sh  env082-roulette-ui-workflow-rebuild-smoke.sh  env083a-roulette-randomness-source-audit.sh  env083b-toccata-fairness-anchor-feasibility.sh  env083c-toccata-evidence-bound-fairness-verifier-smoke.sh  env083d-user-facing-fairness-proof-explanation-smoke.sh  env083e-app-facing-fairness-proof-artifact-smoke.sh  env083f-round-proof-consistency-smoke.sh  env084-verifiable-demo-round-generator-smoke.sh  env085-static-mock-verifiable-demo-milestone-smoke.sh  env086-live-toccata-workaround-inventory-smoke.sh  env087-tn10-round-commit-reveal-spike-smoke.sh  env088-tn10-covenant-lineage-commit-reveal-smoke.sh  env089-live-toccata-covenant-lineage-milestone-smoke.sh  env090-kip17-covenant-enforced-transition-smoke.sh  (+5 more)
(+257 files in other folders)
