[package]
name = "kaspa-fair-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
kaspa-addresses = "0.15.0"
kaspa-foundation = { path = "../kaspa-foundation" }
kaspa-hashes = "0.15.0"
kaspa-rpc-core = "0.15.0"
kaspa-wrpc-client = "0.15.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0"
tokio = { version = "1.42.1", features = ["rt-multi-thread"] }
js-sys = "=0.3.70"
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "=0.4.43"
web-sys = "=0.3.70"
