[package]
name = "kaspa-fair-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
kaspa-addresses = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/addresses" }
kaspa-consensus-core = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/consensus/core" }
kaspa-foundation = { path = "../kaspa-foundation" }
kaspa-hashes = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/hashes" }
kaspa-rpc-core = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/rpc/core" }
kaspa-txscript = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/crypto/txscript" }
kaspa-wrpc-client = { path = "/root/kaspa-fair-lab/tools/rusty-kaspa-source/env058-20260625T230041Z/rusty-kaspa-tn10-toc3/rpc/wrpc/client" }
num-bigint = "0.4"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
serde_json = "1.0"
tokio = { version = "1.42.1", features = ["rt-multi-thread", "time"] }
js-sys = "=0.3.77"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = "=0.3.77"
